@@ -4,18 +4,18 @@
 	<parent>
 		<artifactId>weasis-core-parent</artifactId>
 		<groupId>org.weasis.core</groupId>
-		<version>2.5.3-SNAPSHOT</version>
+		<version>2.6.1-SNAPSHOT</version>
 		<relativePath>../weasis-core-parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>weasis-core-ui</artifactId>
 	<packaging>bundle</packaging>
 	<name>Weasis UI API (j2se) [${project.artifactId}]</name>
+	
 	<properties>
 		<bundle.namespace>org.weasis.core.ui</bundle.namespace>
-		<bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
-		<powermock.version>1.6.5</powermock.version>
 	</properties>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -28,20 +28,44 @@
 						<Bundle-Activator>${bundle.namespace}.internal.Activator</Bundle-Activator>
 						<!-- add for Xchart: ,com.xeiam.xchart.*,com.xeiam.xchart.internal.markers.*,de.erichseifert.* -->
 						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*,it.cnr.imaa.*,org.jdesktop.jxlayer.*,com.github.lgooddatepicker.*,com.privatejgoodies.*</Export-Package>
-						<!-- Import only classes, will exclude *.RSA and *.SF files to avoid 
-							invalid signature issue. -->
+						<!-- Import only classes, will exclude *.RSA and *.SF files to avoid invalid signature issue. -->
 						<Embed-Dependency>*;scope=compile;inline=org.**|it.**</Embed-Dependency>
 					</instructions>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>java9</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>--add-modules=java.xml.bind</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.weasis.core</groupId>
 			<artifactId>weasis-core-api</artifactId>
-			<version>2.5.3-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.weasis.thirdparty</groupId>
+			<artifactId>docking-frames</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>it.cnr.imaa.essi</groupId>
@@ -56,7 +80,7 @@
 		<dependency>
 			<groupId>com.github.lgooddatepicker</groupId>
 			<artifactId>LGoodDatePicker</artifactId>
-			<version>8.3.0</version>
+			<version>10.3.1</version>
 		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>com.xeiam.xchart</groupId> -->
@@ -68,26 +92,18 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.5.2</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>${powermock.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
-			<version>${powermock.version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.bean-matchers</groupId>
 			<artifactId>bean-matchers</artifactId>
-			<version>0.9</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
